tooling/nargo_cli/tests/snapshots/execution_success/conditional_regression_547/execute__tests__force_brillig_true_inliner_-9223372036854775808.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "[noir_version]",
  "hash": "[hash]",
  "abi": {
    "parameters": [
      {
        "name": "x",
        "type": {
          "kind": "field"
        },
        "visibility": "private"
      }
    ],
    "return_type": {
      "abi_type": {
        "kind": "field"
      },
      "visibility": "public"
    },
    "error_types": {
      "17843811134343075018": {
        "error_kind": "string",
        "string": "Stack too deep"
      }
    }
  },
  "bytecode": [
    "func 0",
    "current witness index : _1",
    "private parameters indices : [_0]",
    "public parameters indices : []",
    "return value indices : [_1]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _0) 0 ]], outputs: [_1]",
    "unconstrained func 0",
    "[Const { destination: Direct(2), bit_size: Integer(U32), value: 1 }, Const { destination: Direct(1), bit_size: Integer(U32), value: 32838 }, Const { destination: Direct(0), bit_size: Integer(U32), value: 3 }, Const { destination: Relative(2), bit_size: Integer(U32), value: 1 }, Const { destination: Relative(3), bit_size: Integer(U32), value: 0 }, CalldataCopy { destination_address: Direct(32836), size_address: Relative(2), offset_address: Relative(3) }, Mov { destination: Relative(1), source: Direct(32836) }, Call { location: 13 }, Call { location: 15 }, Mov { destination: Direct(32837), source: Relative(1) }, Const { destination: Relative(2), bit_size: Integer(U32), value: 32837 }, Const { destination: Relative(3), bit_size: Integer(U32), value: 1 }, Stop { return_data: HeapVector { pointer: Relative(2), size: Relative(3) } }, Const { destination: Direct(32835), bit_size: Field, value: 0 }, Return, Call { location: 26 }, Const { destination: Relative(3), bit_size: Integer(U32), value: 4 }, Mov { destination: Relative(4), source: Direct(0) }, Mov { destination: Relative(5), source: Direct(32835) }, BinaryIntOp { destination: Direct(0), op: Add, bit_size: U32, lhs: Direct(0), rhs: Relative(3) }, Call { location: 32 }, Mov { destination: Direct(0), source: Relative(0) }, Mov { destination: Relative(2), source: Relative(5) }, BinaryFieldOp { destination: Relative(3), op: Add, lhs: Relative(1), rhs: Relative(2) }, Mov { destination: Relative(1), source: Relative(3) }, Return, Const { destination: Direct(32772), bit_size: Integer(U32), value: 30720 }, BinaryIntOp { destination: Direct(32771), op: LessThan, bit_size: U32, lhs: Direct(0), rhs: Direct(32772) }, JumpIf { condition: Direct(32771), location: 31 }, IndirectConst { destination_pointer: Direct(1), bit_size: Integer(U64), value: 17843811134343075018 }, Trap { revert_data: HeapVector { pointer: Direct(1), size: Direct(2) } }, Return, Call { location: 26 }, BinaryFieldOp { destination: Relative(3), op: Equals, lhs: Relative(1), rhs: Direct(32835) }, JumpIf { condition: Relative(3), location: 40 }, Jump { location: 36 }, Const { destination: Relative(3), bit_size: Field, value: 1 }, BinaryFieldOp { destination: Relative(4), op: Div, lhs: Relative(3), rhs: Relative(1) }, Mov { destination: Relative(2), source: Relative(4) }, Jump { location: 42 }, Mov { destination: Relative(2), source: Direct(32835) }, Jump { location: 42 }, Mov { destination: Relative(1), source: Relative(2) }, Return]"
  ],
  "debug_symbols": "pZLNbsMgDIDfxWcO/C1Z8ypVFZGEVEiIRBQmTRHvPhPKlh52aHvhw5jPRsIbTHqI1964eblBd95g8MZac+3tMqpgFoenG9C8sAY6RoC1BZ8Fpx2cFrACXiCg4wQEQiBQlwjUZUoEaoM+eK1z/UNHfMeqvHYBOhetJfClbNwv3VbldgblMUsJaDchseBsrM67RP5s+r8qqLzLgp1+9Y8nfPqe37TVb8ULvqTVl4w/+BeM1Gj8wx+mXMkbNVh9D+foxkM2fK81U2dg9cuop+h1rnQYBFzPvCGCXVLu9gM=",
  "file_map": {
    "50": {
      "source": "fn main(x: Field) -> pub Field {\n    // Regression test for issue #547\n    // Warning: it must be kept at the start of main\n    let arr: [u8; 2] = [1, 2];\n    if arr[0] != arr[1] {\n        for i in 0..1 {\n            assert(i != 2);\n        }\n    }\n    // Regression for predicate simplification\n    x + safe_inverse(0)\n}\n\nfn safe_inverse(n: Field) -> Field {\n    if n == 0 {\n        0\n    } else {\n        1 / n\n    }\n}\n",
      "path": ""
    }
  },
  "expression_width": {
    "Bounded": {
      "width": 4
    }
  }
}
