tooling/nargo_cli/tests/snapshots/execution_success/conditional_regression_547/execute__tests__stdout.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stdout
---
brillig(inline) fn main f0 {
  b0(v0: Field):
    (no terminator instruction)
}
[conditional_regression_547] Circuit output: 0x01
